fix spacing

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -4,7 +4,7 @@
 
 * {
   font-family: FantasqueSansMono Nerd Font;
-  font-size: 16px;
+  font-size: 14px;
   min-height: 0;
 }
 
